double scrollbar fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,4 @@ body{
     font-family: 'Ubuntu', sans-serif !important;
 }
 
-body, html{
-    height:100%;
-  }
+
